maint: columns stopped behaving as expected due to problems with words not cutting when screen is too small... working through it

--- a/css/main.css
+++ b/css/main.css
@@ -7,10 +7,10 @@
     --white-4: rgba(110,110,110);
 
     --grey-0: rgb(50,50,50);
-    --grey-1: rgb(60,60,60);
-    --grey-2: rgb(70,70,70);
-    --grey-3: rgb(80, 80, 80);
-    --grey-4: rgb(90, 90, 90);
+    --grey-1: rgb(70,70,70);
+    --grey-2: rgb(80,80,80);
+    --grey-3: rgb(90, 90, 90);
+    --grey-4: rgb(95, 95, 95);
     --grey-5: rgb(100, 100, 100);
 
     --green-0: #16B3C9;
@@ -66,6 +66,9 @@ html {
 }
 
 body {
+    scrollbar-color: var(--green-0) var(--grey-1);
+    scrollbar-width: thin;
+    scrollbar
     margin: 0 auto;
     background: var(--main-bg-grad);
     font-family: "Inter", sans-serif;
@@ -123,12 +126,9 @@ p {
     font-style: normal;
     font-weight:  var(--font-weight-500);
     line-height: normal;
-    /*max-height: var(--h--3-6);*/
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
+
     display: block;
-    align-self: stretch;
+    /*align-self: center;*/
 }
 
 a {
@@ -160,6 +160,12 @@ a {
     font-family: "Inter", sans-serif;
     font-size: var(--h--1-2);
     font-weight:  var(--font-weight-600);
+}
+.cut{
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 100%;
 }
 
 .floating-md {
@@ -230,11 +236,21 @@ a {
     gap: var(--h--2-4);
     transition: border-radius 500ms, padding 500ms;
 
+    &#filter-checkbox-locations {
+        padding: var(--h--0-8) ;
+        max-height: 20rem;
+        overflow: auto;
+    }
 
     @media (max-width: 800px) {
         border-radius:  var(--radius-md);
         padding: var(--h--1-2) ;
     }
+}
+
+.checkbox-container {
+
+    overflow-y: scroll;
 }
 
 .logo-container {
@@ -320,20 +336,23 @@ a {
 
 .col1 {
     grid-template-columns: none;
+    /*width: 100%;*/
 }
 
 .col2 {
     grid-template-columns: 1fr 1fr;
-    flex: 1 1 0;
+    width: 100%;
     @media (max-width: 550px){
         grid-template-columns: none;
     }
 }
 
 .col3 {
-    grid-template-columns: 1fr 1fr 1fr;
 
-    @media (max-width: 900px) {
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 100%;
+
+    @media (max-width: 800px) {
         grid-template-columns: 1fr 1fr;
     }
     @media (max-width: 550px){
@@ -343,38 +362,85 @@ a {
 
 /* interactive elements */
 input {
-    height: 4.8rem;
+
     width: 100%;
     display: flex;
     color: var(--white-0);
     background-color: var(--grey-2);
     border: 0.2rem solid var(--white-4);
-    border-radius: var(--radius-xl);
+    border-radius: var(--radius-sm);
     gap: var(--h--1-6);
-    padding: var(--h--1-6);
-    padding-right: 5.6rem;
 
-    &:hover {
-        background-color: var(--grey-2);
-        /*opacity: 90%;*/
+
+    &#search-input {
+        height: 4.8rem;
+        padding: var(--h--1-6);
+        padding-right: 5.6rem;
+        border-radius: var(--radius-xl);
+    }
+
+
+    &.checkbox-location {
+        appearance: none;
+        background: var(--grey-2);
+        width: 2rem;
+        height: 2rem;
         border: 0.2rem solid var(--white-4);
+
+        &:hover {
+            background-color: var(--grey-2);
+            /*opacity: 90%;*/
+            border: 0.2rem solid var(--grey-1);
+        }
+
+        &:focus-visible {
+            background-color: var(--grey-2);
+            outline: none;
+            border: 0.2rem solid var(--white-3);
+        }
+
+        &:checked {
+            position: relative;
+            border-width: 0.2rem;
+            width: 2rem;
+            height: 2rem;
+            appearance: none;
+            background: var(--green-0);
+            border-color: var(--green-0);
+
+            &:hover {
+                border-width: 0.2rem;
+                border-color: var(--green-2);
+            }
+
+            &:after {
+                content: url('../icons/tick_x16.svg');
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top: calc(50% - 0.8rem);
+                left: calc(50% - 0.8rem);
+                border: none;
+                opacity: 1;
+                outline: none;
+            }
+        }
     }
 
 
-    &:focus-visible {
-        background-color: var(--grey-2);
-        outline: none;
-        border: 0.2rem solid var(--white-3);
-    }
 }
+
+
+
 
 .content {
     display: flex;
-    /*align-self: stretch;*/
+    /*width: 100%;*/
     align-items: center;
     padding: var(--h--0-8);
     gap: var(--h--1-2);
     border-radius: var(--radius-md);
+    flex: 1 1 1fr;
 
     &:hover {
         background-color: var(--grey-2);
@@ -391,7 +457,7 @@ input {
     }
 
     & .album {
-        border-radius: var(--h--0-4);
+        border-radius: var(--radius-sm);
         background: darkslateblue;
     }
 
@@ -417,12 +483,21 @@ input {
         gap: var(--h--0-4);
         flex: 1 0 0;
         align-items: flex-start;
-        /*overflow: hidden;*/
+        overflow: hidden;
+        width: 100%;
+        &.go-down-home {
+            display: flex;
+            flex-direction: column;
+            overflow: visible;
+            align-items: center;
+            text-align: center;
+            width: clamp(10rem, 14rem, 16rem);
+        }
     }
 
     & .concert {
         display: flex;
-        width: 100%;
+        width: 50%;
         align-items: center;
         justify-content: flex-start;
         gap: var(--h--0-8);
@@ -433,11 +508,13 @@ input {
 .go-down {
     display: flex;
     flex-direction: column;
-    width: clamp(10rem, 14rem, 16rem);
 }
 
 .go-across {
+    display: flex;
     flex-direction: row;
+    align-items: center;
+    gap: 1.2rem;
 }
 
 .divider-dot {
@@ -505,7 +582,7 @@ input {
 
 .filter-open {
     opacity: 1;
-    display: flex;
+    /*display: flex;*/
     translate: 0 0;
     transition-property: display opacity;
     transition-duration: .4s;
@@ -535,13 +612,8 @@ input {
 }
 
 .first {
-
     z-index: 2;
 }
-
-
-
-
 
 .button-1 {
 
@@ -554,9 +626,10 @@ input {
     justify-content: space-between;
     align-items: center;
     flex: 1 0 0;
-    border-radius: var(--h--2-8);
+    border-radius: var(--radius-xl);
     background: var(--grey-2);
     transition: padding 500ms;
+    height: fit-content;
     @media (max-width:500px){
         padding: var(--h--0-4) var(--h--1-2) ;
     }
@@ -599,7 +672,7 @@ input {
 
 
 
-    &#button-filter,  &#button-filter-checkbox {
+    &#button-filter{
         min-width: 18rem;
         max-width: 26rem;
 
@@ -692,6 +765,13 @@ input {
             background-color:var(--green-3);
         }
     }
+    &.round {
+        border-radius: 34px;
+        &:before {
+            border-radius: 50%;
+        }
+
+    }
 }
 
 input:checked + .slider-button {
@@ -713,9 +793,7 @@ input:checked + .slider-button:before {
     border-radius: 34px;
 }
 
-.slider-button.round:before {
-    border-radius: 50%;
-}
+
 
 
 
@@ -778,7 +856,7 @@ input[type='range']::-webkit-slider-thumb {
 
     & input{
         position: absolute;
-        max-height: 0.8rem;
+        height: 0.8rem;
         padding: 0;
         margin: 0;
         border: 0;
@@ -870,7 +948,7 @@ input[type='range']::-webkit-slider-thumb {
         border: none;
         display: block;
         position: relative;
-        top: 0;
+        top: 0.8rem;
     }
 
     .double-slider-container input[type='range']:nth-child(1),
